--- a/client/index.html
+++ b/client/index.html
@@ -30,28 +30,29 @@
         </div>
         <div class="iterface">
           <div class="interface__file">
-            <form enctype="file__form">
-              <input type="file" name="f">
-            </form>
+            <div enctype="file__form">
+              <input type="file" id="file">
+              <button class="file__btn">Подключить</button>
+            </div>
           </div>
           <div class="iterface__conntect">
-            <div class="form form__connect">
+            <form class="form form__connect" id="form_connect" method="POST">
               <div class="form__wrapper">
-                <div class="label__wrapper">
-                  <label for="fname">IP</label>
-                  <input type="text" name="ip">
-                </div>
-                <div class="label__wrapper">
-                  <label for="lname">Логин</label>
-                  <input type="text" name="name">
-                </div>
-                <div class="label__wrapper">
-                  <label for="lname">Пароль</label>
-                  <input type="text" name="password">
-                </div>
+                <fieldset class="label__wrapper">
+                  <label for="ip">IP</label>
+                  <input  id="ip" name="ip" type="text" required>
+                </fieldset>
+                <fieldset class="label__wrapper">
+                  <label for="login">Логин</label>
+                  <input  id="login" name="login" type="text" required>
+                </fieldset>
+                <fieldset class="label__wrapper">
+                  <label for="password">Пароль</label>
+                  <input  id="password" name="password" type="password" required>
+                </fieldset>
               </div>
-              <button class="form__submit button">Подключиться</button>
-            </div>
+              <button class="form__submit button" form="form_connect" type="submit">Подключиться</button>
+            </form>
           </div>
           <div class="btn__interface">
             <div class="btn__interface-group--one">
@@ -64,33 +65,6 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
-  </div>
-  <div class="overlay overlayNew no-active">
-    <div class="modal">
-      <div class="modal__container">
-        <div class="modal__modalWrapper">
-          <p class="modal__text">Список узлов</p>
-        </div>
-        <div class="modal__form-check">
-          <div class="modal__form-knot">
-            <p class="modal__num">1</p>
-            <p class="modal__ip">192.168.0.11</p>
-            <p class="modal__eth">eth1</p>
-          </div>
-          <div class="modal__form-knot">
-            <p class="modal__num">2</p>
-            <p class="modal__ip">192.168.0.17</p>
-            <p class="modal__eth">eth2</p>
-          </div>
-          <div class="modal__form-knot">
-            <p class="modal__num">3</p>
-            <p class="modal__ip">192.168.0.21</p>
-            <p class="modal__eth">eth3</p>
-          </div>
-        </div>
-        <span class="modal__close"></span>
       </div>
     </div>
   </div>
